# xmrig

./: CMakeLists.txt  xmrix-client.js  xmrix-server.js
src/: App.cpp  App_unix.cpp  Mem.cpp  Mem_unix.cpp  Options.cpp  Options.h  Summary.cpp  xmrig.cpp.bak  xmrix.cpp
src/crypto/: CryptoNight.cpp
src/log/: SysLog.cpp
src/net/: Client.cpp  Client.h  Job.cpp  Job.h  Network.cpp  Network.h  Url.cpp  Url.h
src/net/strategies/: DonateStrategy.cpp  DonateStrategy.h  FailoverStrategy.cpp  FailoverStrategy.h  SinglePoolStrategy.cpp  SinglePoolStrategy.h
src/workers/: SingleWorker.cpp  Worker.cpp  Workers.cpp  Workers.h
